--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
         <link href="css/tooplate-wedding-lite.css" rel="stylesheet">
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+        <link rel="icon" type="image/png" href="images/Logo2.png">
 <!--
 
 Tooplate 2131 Wedding Lite
@@ -91,7 +92,7 @@ Free Bootstrap 5 HTML Template
         </div>
         <div class="col-lg-12 col-6">
             <div class="about-info-wrap">
-                <img src="images/logo2.png" alt="Photo">
+                <img src="images/Logo2.png" alt="Photo">
                 <p>Founded as the first private equity tennis club of Oakleigh in 1879, OTC became the home courts for
                     many players and competitions. Oakleigh’s players were among the first to compete when pennant
                     competition commenced. Over the years, OTC has become a dynamic sporting and social nexus for our
